--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@ button:hover{
  .burger{
     display: none;
     font-size: 24px;
+    color: #283d2b;
   }
 
 .nem{
@@ -65,6 +66,7 @@ button:hover{
 .pan{
   font-size: 22px;
   font-weight: bold;
+  color: #283d2b;
 }
 
 @media(max-width: 768px){
