--- a/src/component/About.css
+++ b/src/component/About.css
@@ -8,6 +8,7 @@
 .photo{
     width: 600px;
     border-radius: 5px;
+   
 }
 .pas{
 display: flex;
@@ -17,6 +18,7 @@ align-items: center;
 .find{
     width: 500px;
     font-size: 18px;
+      color: #0e3014;
 }
 .us{
     font-size: 40px;
@@ -31,18 +33,21 @@ align-items: center;
 .our{
     font-size: 22px;
     font-weight: bold;
-    
+      color: #0e3014;
     width: 620px;
 }
 .lists{
     font-size: 15px;
     line-height: 1.9;
-    
+    color: #0e3014;
 }
 .sis{
     margin-top:50px ;
     margin-bottom: 10px;
     
+}
+.nemss{
+    color: #0e3014;
 }
 .bis{
 animation: drive 5s ease forwards;
@@ -83,6 +88,7 @@ animation: drive 5s ease forwards;
     font-weight: bold;
     margin-bottom: 5px;
     margin-top: 5px;
+    color: #0e3014;
 }
 .reay{
     display: flex;
@@ -95,9 +101,11 @@ animation: drive 5s ease forwards;
 .read{
 font-size: 30px;
 font-weight: bold;
+ color: #283d2b;
 }
 .t{
     font-size: 15px;
+    color: #0e3014;
 }
 
 @media(max-width:768px){
@@ -140,6 +148,7 @@ font-weight: bold;
     }
     .nemss{
         font-size: 20px;
+
     }
     .choice{
         width: 100%;
@@ -178,7 +187,7 @@ font-weight: bold;
     font-size: 18px;
 }
 .nage{
-    width: 450px;
+    width: 460px;
     padding-left: 20px;
 }
 li{
