--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@ button:hover{
   padding: 0 20px;
   justify-content: space-between;
   margin-bottom: 20px;
+  margin-top: 20px;
   align-items: center;
 }
 
